UX-833 #comment adjust CSS to resolve card alignment issues

--- a/_sass/_shakespeare.scss
+++ b/_sass/_shakespeare.scss
@@ -148,6 +148,11 @@ strong {
   line-height: 1.5;
 }
 
+.exhibit-cards .row {
+  margin: 0 auto;
+  padding:0;
+}
+
 .exhibit-link {
   border: 1px solid #e0e0e0;
   border-radius: 2px;
@@ -305,8 +310,13 @@ a {
 .card {
   height: 389px;
   width: 311px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.card .card-content {
+  height: 160px;
+}
 .card .card-action {
   border-top: none;
   padding: 12px;
@@ -345,8 +355,5 @@ a {
 @media (max-width: 600px) {
   .lg-sub-html {
     display: none;
-  }
-  .right-content {
-    float: none;
   }
 }
